helmfile/manifests/victoriametrics/ingress-tailscale.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt
    labels:
      app: vminsert
    name: vmcluster-victoria-metrics-cluster-vminsert-tailscale
    namespace: victoria-metrics
  spec:
    ingressClassName: traefik-tailscale
    rules:
    - host: vminsert.tailscale.str08.net
      http:
        paths:
        - backend:
            service:
              name: vmcluster-victoria-metrics-cluster-vminsert
              port:
                name: http
          path: /insert
          pathType: Prefix
    tls:
    - hosts:
      - vminsert.tailscale.str08.net
      secretName: vminsert.tailscale.str08.net-dns01
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt
    labels:
      app: vmselect
    name: vmcluster-victoria-metrics-cluster-vmselect-tailscale
    namespace: victoria-metrics
  spec:
    ingressClassName: traefik-tailscale
    rules:
    - host: vmselect.tailscale..str08.net
      http:
        paths:
        - backend:
            service:
              name: vmcluster-victoria-metrics-cluster-vmselect
              port:
                name: http
          path: /select
          pathType: Prefix
    tls:
    - hosts:
      - vmselect.tailscale.str08.net
      secretName: vmselect.tailscale.str08.net-dns01
kind: List
metadata: {}
